# ai-tracker

./: CLAUDE.md  README.md  dashboard.html  pyproject.toml  requirements.txt
.github/workflows/: update.yml
aai/: __init__.py  agent.py  cli.py  indices.py  report.py  schema.py  seed.py  sources.py  storage.py
data/: cases.db
reports/: dashboard.html  latest.json
scripts/: run_update.sh
